--- a/index.html
+++ b/index.html
@@ -135,7 +135,36 @@
       </div>
     </div>
   </div>
-   
+   <div class="offer-choice">
+     <span>Где вы хотите отдохнуть?</span>
+     <div class="offer-choice__item">
+       <a href="">
+         <span class="offer-choice__title">В отеле</span>
+         ОТ <span class="offer-choice__price">4000</span> РУБ./СУТКИ
+       </a>
+     </div>
+     <div class="offer-choice__item">
+       <a href="">
+         <span class="offer-choice__title">В коттедже</span>
+         ОТ <span class="offer-choice__price">6800</span> РУБ./СУТКИ
+       </a>
+     </div>
+   </div>
   </main>
+  <footer class="page-footer">
+    <div class="page-footer__adress">
+      <p>г. Санкт-Петербург приморское ш.600</p>
+    </div>
+    <div class="page-footer__links">
+      <img src="" alt="" class="site-logo">
+      <a href="" class="vk"> </a>
+      <a href="" class="instagramm"> </a>
+      <a href="" class="facebook"> </a>
+    </div>
+    <div class="page-footer__phone">
+      <span>+7 812 777-55-88</span>
+      <span>info@greenvalley.ru</span>
+    </div>
+  </footer>
 </body>
 </html>
