bootstrap first page

--- a/src/blocks/geography/geography.html
+++ b/src/blocks/geography/geography.html
@@ -1,9 +1,11 @@
+<div class="container">
+  <div class="row">
   <div class="geography">
-    <div class="geography-map">
+    <div class="geography-map col-xs-12">
       <!-- Место для карты -->
     </div>
     <div class="geography-transport">
-      <div class="geography-transport__item">
+      <div class="geography-transport__item col-xs-4 col-xs-offset-2">
         <b class="geography-transport__bus">АВТОБУСЫ</b>
         <ul class="geography-transport__bus-list">
           <li><strong>№211</strong> от станции метро "Черная речка" до остановки "Санаторий Репино"</li>
@@ -12,8 +14,10 @@
           <li><strong>№400К</strong> от станции метро "Площадь Ленина"</li>
         </ul>
       </div>
-      <div class="geography-transport__item">
+      <div class="geography-transport__item col-xs-4">
         <p>Электропоезд Выборгского направления от Финляндского вокзала Санкт-Петербурга до платформы "Репино"</p>
       </div>
     </div>
   </div>
+  </div>
+</div>
