--- a/src/blocks/offer-choice/offer_choice.html
+++ b/src/blocks/offer-choice/offer_choice.html
@@ -1,15 +1,19 @@
-   <div class="offer-choice">
-     <span>Где вы хотите отдохнуть?</span>
-     <div class="offer-choice__item">
+   <div class="offer-choice text-center">
+   <div class="container">
+     <div class="row">   
+     <span class="col-xs-12">Где вы хотите отдохнуть?</span>
+     <div class="offer-choice__item col-xs-4 col-xs-offset-2">
        <a href="">
          <span class="offer-choice__title">В отеле</span>
          ОТ <span class="offer-choice__price">4000</span> РУБ./СУТКИ
        </a>
      </div>
-     <div class="offer-choice__item">
+     <div class="offer-choice__item col-xs-4 col-xs-offset-0.5">
        <a href="">
          <span class="offer-choice__title">В коттедже</span>
          ОТ <span class="offer-choice__price">6800</span> РУБ./СУТКИ
        </a>
      </div>
    </div>
+  </div>
+</div>
