--- a/src/blocks/page-footer/page-footer.html
+++ b/src/blocks/page-footer/page-footer.html
@@ -1,15 +1,19 @@
   <footer class="page-footer">
-    <div class="page-footer__adress">
+  <div class="container">
+    <div class="row">
+    <div class="page-footer__adress col-xs-2">
       <p>г. Санкт-Петербург приморское ш.600</p>
     </div>
-    <div class="page-footer__links">
+    <div class="page-footer__links col-xs-4 col-xs-offset-2 text-center">
       <img src="" alt="" class="site-logo">
-      <a href="" class="vk"> </a>
-      <a href="" class="instagramm"> </a>
-      <a href="" class="facebook"> </a>
+      <a href="" class="vk">Вконтакте </a>
+      <a href="" class="instagramm"> Инстаграмм</a>
+      <a href="" class="facebook"> Фейсбук</a>
     </div>
-    <div class="page-footer__phone">
+    <div class="page-footer__phone col-xs-2 col-xs-offset-2 text-right">
       <span>+7 812 777-55-88</span>
       <span>info@greenvalley.ru </span>
     </div>
+    </div>
+  </div>
   </footer>
