--- a/src/blocks/page-header/page-header.html
+++ b/src/blocks/page-header/page-header.html
@@ -1,32 +1,34 @@
 <header class="page-header">
-    <div class="page-header__inner">
-      <a class="site-logo" href="/"><img alt="" src=""></a>
-      <nav class="main-nav">
+    <div class="page-header container">
+     <div class="row">
+      <a class="site-logo col-xs-2" href="/"><img alt="" src=""></a>
+      <nav class="main-nav col-xs-6">
         <div class="main-nav__menu-toogler"></div>
-        <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
+        <ul class="main-nav__list list-inline">
+          <li class="main-nav__item main-nav__item--active inline-item">
             <a class="main-nav__link" href="">НОМЕРА</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">КОТТЕДЖ</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">РЕСТОРАН</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">ОТДЫХ</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
-      <div class="short-contacts">
-        <a class="short-contacts__phone" href="">+7 812 777-55-88</a> <span class=
-        "short-contacts__address">г. Санкт-Петербург, Приморское ш.600</span>
+      <div class="short-contacts col-xs-2">
+        <a class="short-contacts__phone" href="">+7 812 777-55-88</a> <p class=
+        "short-contacts__address">г. Санкт-Петербург, Приморское ш.600</p>
       </div>
-      <div class="page-header__btn">
+      <div class="page-header__btn col-xs-2">
         <a class="btn btn--icon-calendar" href="">ЗАБРОНИРОВАТЬ</a>
       </div>
     </div>
+   </div>
   </header>
