--- a/src/blocks/promo-slider/promo_slider.html
+++ b/src/blocks/promo-slider/promo_slider.html
@@ -1,4 +1,4 @@
-<div class="promo-slider">
+<div class="promo-slider col-xs-12">
     <div class="img-slider">
       <div class="img-slider__item" style="">
         <div class="img-slider__inner">
@@ -13,31 +13,38 @@
         </div>
       </div>
     </div>
-    
-    <ul class="promo-slider__tabs">
-      <li class="promo-slider__tabs-item promo-slider__tabs-item--active"><a href="">СЕМЕЙНЫЙ ОТДЫХ</a></li>
-      <li class="promo-slider__tabs-item"><a href="">КОРПОРАТИВНЫЙ</a></li>
+    <div class="promo-slider-tabs col-xs-12 text-center">
+    <div class="container">
+      <div class="row">
+    <ul class="promo-slider__tabs list-inline">
+      <li class="promo-slider__tabs-item promo-slider__tabs-item--active inline-item"><a href="">СЕМЕЙНЫЙ ОТДЫХ</a></li>
+      <li class="promo-slider__tabs-item inline-item"><a href="">КОРПОРАТИВНЫЙ</a></li>
     </ul>
     
     <div class="service-slider">
       <section class="service-slider__item">
         <h1 class="service-slider__title">Здоровый отдых</h1>
         <p class="service-slider__descr">Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</p>
-        <ul class="service-slider__list">
-          <li class="service-slider__item" style="">БАССЕЙН</li>
-          <li class="service-slider__item" style="">СПОРТИВНАЯ ПЛОЩАДКА</li>
-          <li class="service-slider__item" style="">БИЛЬЯРД</li>
-          <li class="service-slider__item" style="">СПА</li>
-          <li class="service-slider__item" style="">БАНИ</li>
-          <li class="service-slider__item" style="">АНИМАЦИЯ</li>
+        <ul class="service-slider__list list-inline">
+          <li class="service-slider__item inline-item" style="">БАССЕЙН</li>
+          <li class="service-slider__item inline-item" style="">СПОРТИВНАЯ ПЛОЩАДКА</li>
+          <li class="service-slider__item inline-item" style="">БИЛЬЯРД</li>
+          <li class="service-slider__item inline-item" style="">СПА</li>
+          <li class="service-slider__item inline-item" style="">БАНИ</li>
+          <li class="service-slider__item inline-item" style="">АНИМАЦИЯ</li>
         </ul>
       </section>
       <section class="service-slider__item">
         <h1 class="service-slider__title"></h1>
         <p class="service-slider__descr"></p>
+<!--
         <ul class="service-slider__list">
           <li class="service-slider__item" style=""></li>
         </ul>
+-->
       </section>
+      </div>
+    </div>
+    </div>
     </div>
 </div>
