--- a/src/blocks/special-offer/special_offer.html
+++ b/src/blocks/special-offer/special_offer.html
@@ -1,4 +1,8 @@
-  <div class="special-offer">
+
+   <div class="special-offer col-xs-12 text-center">
+
+     <div class="container">
+    <div class="row">
     <div class="special-offer-item">
       <div class="special-offer-item__inner">
         <b class="special-offer-item__title">СКИДКИ В МАЕ</b>
@@ -10,5 +14,7 @@
         <b class="special-offer-item__title">СКИДКИ В МАЕ</b>
         <p class="special-offer-item__text">Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
       </div>
+    </div>
+  </div>      
     </div>
   </div>
