--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,13 @@
 <body>
   @@include('blocks/page-header/page-header.html')
   <main>
- <!--  @@include('blocks/promo-slider/promo_slider.html')
+  @@include('blocks/promo-slider/promo_slider.html')
   @@include('blocks/gallery/gallery.html')
   @@include('blocks/feedbacks/feedbacks.html')
   @@include('blocks/special-offer/special_offer.html')
   @@include('blocks/geography/geography.html')
-  @@include('blocks/offer-choice/offer_choice.html') -->
-  <div class="sum">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, debitis.</div>
-				<div class="col-xs-3">Saepe cumque totam esse eveniet. Corrupti sequi omnis, dolorem doloremque.</div>
-				<div class="col-xs-3">Est quo voluptatum odit incidunt reiciendis perferendis quibusdam dolore quaerat!</div>
-				<div class="col-xs-3">Cum culpa facilis, quod illum, quos voluptatibus. Vitae, unde, placeat.</div>
-			</div>
-		</div>
-	</div>
+  @@include('blocks/offer-choice/offer_choice.html')
+
   </main>
 @@include('blocks/page-footer/page-footer.html')
 </body>
