--- a/src/blocks/rooms-promo/rooms_promo.html
+++ b/src/blocks/rooms-promo/rooms_promo.html
@@ -1,4 +1,4 @@
-    <section class="rooms-promo">
+    <section class="rooms-promo col-xs-12 text-center">
       <h1 class="rooms-promo__title">Номера в отеле Green Valley</h1>
       <p class="rooms-promo__text">Комфорт и живописный вид на Финский залив и сосновый парк. 4 этажа | 70 номеров</p>
     </section>
