--- a/src/blocks/gallery/gallery.html
+++ b/src/blocks/gallery/gallery.html
@@ -1,8 +1,8 @@
-   <div class="container">
-   	<div class="row">
-   <div class="gallery">
-  	<div class="container">
-<div class="container">
+   
+   	 	<div class="container">
+<div class="row">
+   <div class="gallery col-xs-12">
+ 
 
 
 
