--- a/src/blocks/promo-slider/promo_slider.html
+++ b/src/blocks/promo-slider/promo_slider.html
@@ -1,4 +1,4 @@
-<div class="promo-slider col-xs-12">
+<div class="promo-slider">
     <div class="img-slider">
    <div class="owl-carousel">
     <div class="item">
