--- a/src/blocks/special-offer/special_offer.html
+++ b/src/blocks/special-offer/special_offer.html
@@ -3,18 +3,20 @@
 
      <div class="container">
     <div class="row">
+    <div class="owl-carousel">
     <div class="special-offer-item">
+      <div class="item special-offer-item__inner">
+        <b class="special-offer-item__title">СКИДКИ В МАЕ</b>
+        <p class="special-offer-item__text">Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
+      </div>
+    </div>
+    <div class=" item special-offer-item">
       <div class="special-offer-item__inner">
         <b class="special-offer-item__title">СКИДКИ В МАЕ</b>
         <p class="special-offer-item__text">Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
       </div>
     </div>
-    <div class="special-offer-item">
-      <div class="special-offer-item__inner">
-        <b class="special-offer-item__title">СКИДКИ В МАЕ</b>
-        <p class="special-offer-item__text">Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
-      </div>
-    </div>
-  </div>      
+  </div>  
+  </div>    
     </div>
   </div>
