--- a/src/blocks/page-header/page-header.html
+++ b/src/blocks/page-header/page-header.html
@@ -6,10 +6,10 @@
         <div class="main-nav__menu-toogler"></div>
         <ul class="main-nav__list list-inline">
           <li class="main-nav__item main-nav__item--active inline-item">
-            <a class="main-nav__link" href="">НОМЕРА</a>
+            <a class="main-nav__link" href="../../room-list.html">НОМЕРА</a>
           </li>
           <li class="main-nav__item inline-item">
-            <a class="main-nav__link" href="">КОТТЕДЖ</a>
+            <a class="main-nav__link" href="../../single_room.html">КОТТЕДЖ</a>
           </li>
           <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">РЕСТОРАН</a>
@@ -18,7 +18,7 @@
             <a class="main-nav__link" href="">ОТДЫХ</a>
           </li>
           <li class="main-nav__item inline-item">
-            <a class="main-nav__link" href="">КОНТАКТЫ</a>
+            <a class="main-nav__link" href="../../">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
@@ -27,7 +27,7 @@
         "short-contacts__address">г. Санкт-Петербург, Приморское ш.600</span>
       </div>
       <div class="page-header__btn col-xs-2">
-        <a class="btn btn--icon-calendar" href="">ЗАБРОНИРОВАТЬ</a>
+        <a class="btn btn--icon-calendar" href="../../form.html">ЗАБРОНИРОВАТЬ</a>
       </div>
     </div>
    </div>
