--- a/src/blocks/special-offer/special_offer.html
+++ b/src/blocks/special-offer/special_offer.html
@@ -3,6 +3,7 @@
 
      <div class="container">
     <div class="row">
+    <p class="special-offer__title">Акции и предложения</p>
     <div class="owl-carousel">
     <div class="special-offer-item">
       <div class="item special-offer-item__inner">
