--- a/src/blocks/gallery/gallery.html
+++ b/src/blocks/gallery/gallery.html
@@ -1,21 +1,21 @@
    
    	 	<div class="container">
-<div class="row">
+
    <div class="gallery col-xs-12">
  
 
 
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+<script src="../fotorama/fotorama.js"></script> <!-- 16 KB -->
 
-<!-- 2. Add images to <div class="fotorama"></div>. -->
+
 <div class="fotorama" data-nav="thumbs" data-loop="true">
   <img src="http://s.fotorama.io/1.jpg">
   <img src="http://s.fotorama.io/2.jpg"><img src="http://s.fotorama.io/2.jpg"><img src="http://s.fotorama.io/2.jpg"><img src="http://s.fotorama.io/2.jpg">
 </div>
 
 <!-- 3. Enjoy! -->
-</div>
+
    </div> 
     </div>
    </div>
