--- a/src/blocks/rooms/rooms.html
+++ b/src/blocks/rooms/rooms.html
@@ -2,45 +2,74 @@
       <h1>Категории</h1>
       <div class="container">
       <div class="row">
-      <div class="rooms-item col-xs-5">
-        <span class="rooms-item__title">Эконом</span>
-        <span>от <span class="rooms-item__price">3400 </span>РУБ./СУТКИ</span>
-        <p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Расчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
+      <div class="rooms-item col-xs-12">
+        <div class="rooms-item__left-side">
+        <p class="rooms-item__top">
+        <span class="rooms-item__title">Эконом</span><br>
+        <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">3400 </span>РУБ./СУТКИ</span>
+        </p>
+        <p class="rooms-item__text">В отеле 30 таких номеров площадью от 16 до 20 кв.м. Расчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
+         </div>
+         
+         <div class="rooms-item__right-side">
+           <img src="../../img/room1.png" alt="Эконом комнта" class="rooms-item__img">
+         </div>
          </div>
       </div>
       </div>
       <div class="container">
       <div class="row">
-      <div class="rooms-item col-xs-5">
-         <span class="rooms-item__title">Стандарт</span>
-        <span>от <span class="rooms-item__price">4000 </span>РУБ./СУТКИ</span>
-        <p>В отеле 20 таких номеров. Расчитаны на проживание 2-3 человек. Площадь номера 20-25 кв.м., состояит из гостевой и спальной зоны.</p>
+      <div class="rooms-item col-xs-12">
+      <div class="rooms-item__left-side">
+      <p class="rooms-item__top">
+         <span class="rooms-item__title">Стандарт</span><br>
+        <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">4000 </span>РУБ./СУТКИ</span>
+        </p>
+        <p class="rooms-item__text">В отеле 20 таких номеров. Расчитаны на проживание 2-3 человек. Площадь номера 20-25 кв.м., состояит из гостевой и спальной зоны.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
+        </div>
+        <div class="rooms-item__right-side">
+           <img src="../../img/room2.png" alt="Эконом комнта" class="rooms-item__img">
+         </div>
          </div>
       </div>
       </div>
       <div class="container">
       <div class="row">
-      <div class="rooms-item col-xs-5">
-         <span class="rooms-item__title">Стандарт +</span>
-        <span>от <span class="rooms-item__price">4500 </span>РУБ./СУТКИ</span>
-        <p>В отеле 15 таких номеров. 2-комнатный номер предназначен для проживания 2-4 человек. Площадь номера от 35 кв.м.</p>
+      <div class="rooms-item col-xs-12">
+      <div class="rooms-item__left-side">
+      <p class="rooms-item__top">
+         <span class="rooms-item__title">Стандарт +</span><br>
+        <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">4500 </span>РУБ./СУТКИ</span>
+        </p>
+        <p class="rooms-item__text">В отеле 15 таких номеров. 2-комнатный номер предназначен для проживания 2-4 человек. Площадь номера от 35 кв.м.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
+         </div>
+         <div class="rooms-item__right-side">
+           <img src="../../img/room3.png" alt="Эконом комнта" class="rooms-item__img">
+         </div>
          </div>
       </div>
       </div>
       <div class="container">
       <div class="row">
-      <div class="rooms-item col-xs-5">
-         <span class="rooms-item__title">Люкс</span>
-        <span>от <span class="rooms-item__price">5700 </span>РУБ./СУТКИ</span>
-        <p>В отеле 5 таких номеров. Просторные номера площадью до 40кв.м. с видом на Финский залив, выполненные в оригинальном стиле.</p>
+      <div class="rooms-item col-xs-12">
+      <div class="rooms-item__left-side">
+      <p class="rooms-item__top">
+         <span class="rooms-item__title">Люкс</span><br>
+        <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">5700 </span>РУБ./СУТКИ</span>
+        </p>
+        <p class="rooms-item__text">В отеле 5 таких номеров. Просторные номера площадью до 40кв.м. с видом на Финский залив, выполненные в оригинальном стиле.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
+         </div>
+         <div class="rooms-item__right-side">
+           <img src="../../img/room4.png" alt="Эконом комнта" class="rooms-item__img">
+         </div>
          </div>
       </div>
       </div>
