--- a/src/blocks/single-room-item/single_room_item.html
+++ b/src/blocks/single-room-item/single_room_item.html
@@ -1,34 +1,45 @@
+<div class="container">
+  <div class="row">
 <section class="single-room-item">
-      <h1>Эконом</h1>
-      <b>от<span class="single-room-item__price">3400</span>РУБ./СУТКИ</b>
-      <div class="single-room-item__about">
+      <h1 class="text-center">Эконом</h1>
+      <p class="text-center"><b>от<span class="single-room-item__price">3400</span>РУБ./СУТКИ</b></p>
+      <div class="single-room-item__about col-xs-6">
         <h3>О номере</h3>
         <p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
         <h3>Удобства</h3>
-        <ul class="single-room-item__list-left">
+        <div class="single-room-item__list-left">
+        <ul class="single-room-item__list">
           <li>WI-FI</li>
           <li>Двуспальная кровать</li>
           <li>Кресло</li>
           <li>Раскладывающийся диван</li>
           <li>Фен</li>
         </ul>
-        <ul class="single-room-item__list-right">
+        </div>
+        <div class="single-room-item__list-right">
+        <ul class="single-room-item__list">
           <li>Рабочий стол</li>
           <li>Шкаф для одежды</li>
           <li>Багажная тумба</li>
           <li>Сейф</li>
         </ul>
+        </div>
         <h3>В стоимость входит</h3>
         <ul class="single-room-item__list">
           <li>Бассейн с 8.30 до 10.00</li>
           <li>Завтрак и обед "шведский стол"</li>
         </ul>
       </div>
-      <div class="single-room-item__photo">
-        <!--Место для слайдера-->
+      <div class="single-room-item__photo col-xs-6">
+        <div class="owl-carousel-3">
+    <div class="item"><img src="../../img/single-room1.png" alt=""></div>
+    <div class="item"><img src="../../img/single-room2.png" alt=""></div>
+</div>
       </div>
-      <div class="single-room-item__confirm">
-        <a href="" class="btn btn--icon-calendar">ЗАБРОНИРОВАТЬ</a>
+      <div class="single-room-item__confirm col-xs-12">
+        <a href="" class="btn btn--icon-calendar">ЗАБРОНИРОВАТЬ</a> <br>
         <b>от<span class="single-room-item__price">3400</span>РУБ./СУТКИ</b>
       </div>
     </section>
+    </div>
+</div>
