--- a/src/blocks/single-room-options/single_room_options.html
+++ b/src/blocks/single-room-options/single_room_options.html
@@ -1,20 +1,36 @@
 <div class="single-room-options">
-      <div class="single-room-options-item standart-room">
+<div class="container">
+<div class="row">
+      <div class="single-room-options-item standart-room col-xs-3 col-xs-offset-1">
         <div class="single-room-options-item__inner">
+        <a href="">
+        <img src="../../img/single-room-standart.png" alt="" class="single-room-photo">
           <h3>Стандарт</h3>
           <b>от<span class="single-room-item__price">4000</span>РУБ./СУТКИ</b>
+          <p></p>
         </div>
       </div>
-      <div class="single-room-options-item standart-plus-room">
+      </a>
+      <a href="">
+      <div class="single-room-options-item standart-plus-room col-xs-3 col-xs-offset-1">
         <div class="single-room-options-item__inner">
+        <img src="../../img/single-room-standart+.png" alt="" class="single-room-photo">
           <h3>Стандарт+</h3>
           <b>от<span class="single-room-item__price">4500</span>РУБ./СУТКИ</b>
+          <p></p>
         </div>
       </div>
-      <div class="single-room-options-item lux-room">
+      </a>
+      <a href="">
+      <div class="single-room-options-item lux-room col-xs-3 col-xs-offset-1">
         <div class="single-room-options-item__inner">
+        <img src="../../img/single-room-luxe.png" alt="" class="single-room-photo">
           <h3>Люкс</h3>
           <b>от<span class="single-room-item__price">5700</span>РУБ./СУТКИ</b>
+          <p></p>
         </div>
       </div>
+      </a>
+    </div>
+    </div>
     </div>
