--- a/src/blocks/rooms/rooms.html
+++ b/src/blocks/rooms/rooms.html
@@ -14,7 +14,7 @@
          </div>
          
          <div class="rooms-item__right-side">
-           <img src="../../img/room1.png" alt="Эконом комнта" class="rooms-item__img">
+           <img src="../img/room1.png" alt="Эконом комнта" class="rooms-item__img">
          </div>
          </div>
       </div>
@@ -32,7 +32,7 @@
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
         </div>
         <div class="rooms-item__right-side">
-           <img src="../../img/room2.png" alt="Эконом комнта" class="rooms-item__img">
+           <img src="../img/room2.png" alt="Эконом комнта" class="rooms-item__img">
          </div>
          </div>
       </div>
@@ -50,7 +50,7 @@
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
          </div>
          <div class="rooms-item__right-side">
-           <img src="../../img/room3.png" alt="Эконом комнта" class="rooms-item__img">
+           <img src="../img/room3.png" alt="Эконом комнта" class="rooms-item__img">
          </div>
          </div>
       </div>
@@ -68,7 +68,7 @@
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
          </div>
          <div class="rooms-item__right-side">
-           <img src="../../img/room4.png" alt="Эконом комнта" class="rooms-item__img">
+           <img src="../img/room4.png" alt="Эконом комнта" class="rooms-item__img">
          </div>
          </div>
       </div>
