--- a/src/blocks/offer-choice/offer_choice.html
+++ b/src/blocks/offer-choice/offer_choice.html
@@ -4,14 +4,14 @@
      <span class="offer-choice__main-title col-xs-12">Где вы хотите отдохнуть?</span>
      <div class="offer-choice__item col-xs-4 col-xs-offset-2">
        <a href="" class="offer-choice__item-link">
-       <img src="../img/choice_first.png" alt="" class="offer-choice__item-img">
+       <img src="./img/choice_first.png" alt="" class="offer-choice__item-img">
          <p class="offer-choice__title">В отеле</p>
          ОТ <span class="offer-choice__price">4000</span> РУБ./СУТКИ
        </a>
      </div>
      <div class="offer-choice__item col-xs-4 col-xs-offset-1">
        <a href="" class="offer-choice__item-link">
-        <img src="../img/choice_second.png" alt="" class="offer-choice__item-img">
+        <img src="./img/choice_second.png" alt="" class="offer-choice__item-img">
          <p class="offer-choice__title">В коттедже</p>
          ОТ <span class="offer-choice__price">6800</span> РУБ./СУТКИ
        </a>
