--- a/src/blocks/single-room-item/single_room_item.html
+++ b/src/blocks/single-room-item/single_room_item.html
@@ -32,8 +32,8 @@
       </div>
       <div class="single-room-item__photo col-xs-6">
         <div class="owl-carousel-3">
-    <div class="item"><img src="../img/single-room1.png" alt=""></div>
-    <div class="item"><img src="../img/single-room2.png" alt=""></div>
+    <div class="item"><img src="./img/single-room1.png" alt=""></div>
+    <div class="item"><img src="./img/single-room2.png" alt=""></div>
 </div>
       </div>
       <div class="single-room-item__confirm col-xs-12">
