--- a/src/blocks/feedbacks/feedbacks.html
+++ b/src/blocks/feedbacks/feedbacks.html
@@ -6,7 +6,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_first.png" alt="">
+           <img src="img/feedbacks_first.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
@@ -16,7 +16,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_second.png" alt="">
+           <img src="img/feedbacks_second.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведенные у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый прием персоналом.</p>
@@ -26,7 +26,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_first.png" alt="">
+           <img src="img/feedbacks_first.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
@@ -36,7 +36,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_second.png" alt="">
+           <img src="img/feedbacks_second.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведенные у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый прием персоналом.</p>
@@ -46,7 +46,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_first.png" alt="">
+           <img src="img/feedbacks_first.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
@@ -56,7 +56,7 @@
        <div class="item feedbacks-item  ">
          <div class="feedbacks-item__inner">
          <div class="feedbacks-item__img">
-           <img src="../img/feedbacks_second.png" alt="">
+           <img src="img/feedbacks_second.png" alt="">
          </div>
            <p class="feedbacks-item__name">Екатерина В.</p>
            <p class="feedbacks-item__text">Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведенные у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый прием персоналом.</p>
