--- a/src/blocks/page-header/page-header.html
+++ b/src/blocks/page-header/page-header.html
@@ -1,7 +1,7 @@
 <header class="page-header">
     <div class="page-header container">
      <div class="row">
-      <a class="site-logo col-xs-2" href="/"><img alt="" src="../img/Logo.png"></a>
+      <a class="site-logo col-xs-2" href="/"><img alt="" src="img/Logo.png"></a>
       <nav class="main-nav col-xs-5">
         <div class="main-nav__menu-toogler"></div>
         <ul class="main-nav__list list-inline">
