--- a/src/blocks/page-footer/page-footer.html
+++ b/src/blocks/page-footer/page-footer.html
@@ -1,10 +1,10 @@
   <footer class="page-footer">
   <div class="container">
     <div class="row">
-    <div class="page-footer__adress col-xs-2">
+    <div class="page-footer__adress col-lg-2">
       <p>г. Санкт-Петербург Приморское ш.600</p>
     </div>
-    <div class="page-footer__links col-xs-4 col-xs-offset-2 text-center">
+    <div class="page-footer__links col-lg-4 col-lg-offset-2 text-center">
       <img src="img/Logo.png" alt="" class="site-logo"><br>
       <a href="" class="vk"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="25px" height="15px" viewBox="0 0 548.358 548.358" style="enable-background:new 0 0 548.358 548.358;" xml:space="preserve">
 <g>
@@ -30,7 +30,7 @@
 </svg>
 </a>
     </div>
-    <div class="page-footer__phone col-xs-2 col-xs-offset-2 text-right">
+    <div class="page-footer__phone col-lg-2 col-lg-offset-2 text-right">
       <span>+7 812 777-55-88</span>
       <span>info@greenvalley.ru </span>
     </div>
