--- a/src/blocks/page-header/page-header.html
+++ b/src/blocks/page-header/page-header.html
@@ -1,15 +1,21 @@
 <header class="page-header">
     <div class="page-header container">
      <div class="row">
-      <a class="site-logo col-xs-2" href="/"><img alt="" src="img/Logo.png"></a>
-      <nav class="main-nav col-xs-5">
-        <div class="main-nav__menu-toogler"></div>
+      <a class="site-logo col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-4 col-lg-offset-0 col-lg-2" href="/"><img alt="" src="img/Logo.png"></a>
+      <div class="main-nav__menu-toogler">
+          <a href="" class="menu-toggler">
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
+        </div>
+      <nav class="main-nav col-xs-1 col-lg-5">
         <ul class="main-nav__list list-inline">
           <li class="main-nav__item main-nav__item--active inline-item">
-            <a class="main-nav__link" href="../../room-list.html">НОМЕРА</a>
+            <a class="main-nav__link" href="room-list.html">НОМЕРА</a>
           </li>
           <li class="main-nav__item inline-item">
-            <a class="main-nav__link" href="../../single_room.html">КОТТЕДЖ</a>
+            <a class="main-nav__link" href="single_room.html">КОТТЕДЖ</a>
           </li>
           <li class="main-nav__item inline-item">
             <a class="main-nav__link" href="">РЕСТОРАН</a>
