--- a/src/blocks/geography/geography.html
+++ b/src/blocks/geography/geography.html
@@ -6,7 +6,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d593.7677375173874!2d30.293896588471167!3d59.962194159336185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1460743173363" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="geography-transport">
-      <div class="geography-transport__item col-xs-4 col-xs-offset-2">
+      <div class="geography-transport__item col-xs-12 col-lg-4 col-lg-offset-2">
         <div class="geography-transport__bus-block">
         <b class="geography-transport__bus">АВТОБУСЫ</b>
         <ul class="geography-transport__bus-list">
@@ -17,7 +17,7 @@
         </ul>
       </div>
       </div>
-      <div class="geography-transport__item col-xs-4">
+      <div class="geography-transport__item col-xs-12 col-lg-4">
       <div class="geography-transport__bus-block">
       <b class="geography-transport__trail">ЭЛЕКТРОПОЕЗД</b>
         <p>Электропоезд Выборгского направления от Финляндского вокзала Санкт-Петербурга до платформы "Репино"</p>
