--- a/src/blocks/offer-choice/offer_choice.html
+++ b/src/blocks/offer-choice/offer_choice.html
@@ -2,19 +2,19 @@
    <div class="container">
      <div class="row">   
      <span class="offer-choice__main-title col-xs-12">Где вы хотите отдохнуть?</span>
-     <div class="offer-choice__item col-xs-4 col-xs-offset-2">
+     <div class="offer-choice__item col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-2 col-sm-5 col-sm-offset-0">
        <a href="" class="offer-choice__item-link">
        <img src="img/choice_first.png" alt="" class="offer-choice__item-img">
          <p class="offer-choice__title">В отеле</p>
          ОТ <span class="offer-choice__price">4000</span> РУБ./СУТКИ
        </a>
      </div>
-     <div class="offer-choice__item col-xs-4 col-xs-offset-1">
+     <div class="offer-choice__item col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-1 col-sm-5 col-sm-offset-0">
        <a href="" class="offer-choice__item-link">
         <img src="img/choice_second.png" alt="" class="offer-choice__item-img">
          <p class="offer-choice__title">В коттедже</p>
          ОТ <span class="offer-choice__price">6800</span> РУБ./СУТКИ
-       </a>
+       </a> 
      </div>
    </div>
   </div>
