--- a/src/blocks/promo-slider/promo_slider.html
+++ b/src/blocks/promo-slider/promo_slider.html
@@ -30,21 +30,21 @@
        <div class="container">
       <div class="row">
   <ul class="tabs-list">
-    <li class="tabs-link  active"><a href="#tab_01">СЕМЕЙНЫЙ ОТДЫХ</a></li>
-    <li class="tabs-link"><a href="#tab_02">КОРПОРАТИВНЫЙ ОТДЫХ</a></li>
+    <li class="tabs-link  active col-xs-6 col-lg-2 col-lg-offset-4 col-sm-3 col-sm-offset-3"><a href="#tab_01">СЕМЕЙНЫЙ ОТДЫХ</a></li>
+    <li class="tabs-link col-xs-6 col-lg-2 col-sm-3"><a href="#tab_02">КОРПОРАТИВНЫЙ <span class="hidden-word">ОТДЫХ</span></a></li>
   </ul>
   <div class="tabs-content">
   <div class="row">
     <div class="tab-item  active col-xs-9 col-xs-offset-1" id="tab_01">
     
       <h1 class="promo-slider__title">Здоровый отдых</h1>
-        <p class="promo-slider__descr">Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</p>
+        <p class="promo-slider__descr"><b>Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</b></p>
         <div class="health">
           <ul class="list-inline">
-            <li class="health__item-1"></li>
-            <li class="health__item-2"></li>
-            <li class="health__item-3"></li>
-            <li class="health__item-4"></li>
+            <li class="health__item-1 col-sm-3"></li>
+            <li class="health__item-2 col-sm-3"></li>
+            <li class="health__item-3 col-sm-3"></li>
+            <li class="health__item-4 col-sm-3"></li>
             <li class="health__item-5"></li>
             <li class="health__item-6"></li>
           </ul>
