--- a/src/blocks/rooms/rooms.html
+++ b/src/blocks/rooms/rooms.html
@@ -1,6 +1,6 @@
 <div class="rooms col-xs-12 text-center">
       <h1>Категории</h1>
-      <div class="container">
+      <div class="container no-padding">
       <div class="row">
       <div class="rooms-item col-xs-12">
         <div class="rooms-item__left-side">
@@ -8,6 +8,7 @@
         <span class="rooms-item__title">Эконом</span><br>
         <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">3400 </span>РУБ./СУТКИ</span>
         </p>
+        <img src="img/room1.png" alt="Эконом комнта" class="rooms-item__img-mobile">
         <p class="rooms-item__text">В отеле 30 таких номеров площадью от 16 до 20 кв.м. Расчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
@@ -19,7 +20,7 @@
          </div>
       </div>
       </div>
-      <div class="container">
+      <div class="container no-padding">
       <div class="row">
       <div class="rooms-item col-xs-12">
       <div class="rooms-item__left-side">
@@ -27,6 +28,7 @@
          <span class="rooms-item__title">Стандарт</span><br>
         <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">4000 </span>РУБ./СУТКИ</span>
         </p>
+        <img src="img/room2.png" alt="Эконом комнта" class="rooms-item__img-mobile">
         <p class="rooms-item__text">В отеле 20 таких номеров. Расчитаны на проживание 2-3 человек. Площадь номера 20-25 кв.м., состояит из гостевой и спальной зоны.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
@@ -37,7 +39,7 @@
          </div>
       </div>
       </div>
-      <div class="container">
+      <div class="container no-padding">
       <div class="row">
       <div class="rooms-item col-xs-12">
       <div class="rooms-item__left-side">
@@ -45,6 +47,7 @@
          <span class="rooms-item__title">Стандарт +</span><br>
         <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">4500 </span>РУБ./СУТКИ</span>
         </p>
+        <img src="img/room3.png" alt="Эконом комнта" class="rooms-item__img-mobile">
         <p class="rooms-item__text">В отеле 15 таких номеров. 2-комнатный номер предназначен для проживания 2-4 человек. Площадь номера от 35 кв.м.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
@@ -55,7 +58,7 @@
          </div>
       </div>
       </div>
-      <div class="container">
+      <div class="container no-padding">
       <div class="row">
       <div class="rooms-item col-xs-12">
       <div class="rooms-item__left-side">
@@ -63,6 +66,7 @@
          <span class="rooms-item__title">Люкс</span><br>
         <span class="rooms-item__price-text">ОТ <span class="rooms-item__price">5700 </span>РУБ./СУТКИ</span>
         </p>
+        <img src="img/room4.png" alt="Эконом комнта" class="rooms-item__img-mobile">
         <p class="rooms-item__text">В отеле 5 таких номеров. Просторные номера площадью до 40кв.м. с видом на Финский залив, выполненные в оригинальном стиле.</p>
         <a href="" class="btn">ЗАБРОНИРОВАТЬ</a>
         <a href="" class="moreinfo">ПОДРОБНЕЕ</a>
