--- a/src/blocks/single-room-item/single_room_item.html
+++ b/src/blocks/single-room-item/single_room_item.html
@@ -3,7 +3,13 @@
 <section class="single-room-item">
       <h1 class="text-center">Эконом</h1>
       <p class="text-center"><b>от<span class="single-room-item__price">3400</span>РУБ./СУТКИ</b></p>
-      <div class="single-room-item__about col-xs-6">
+      <div class="owl-mobile">
+      <div class="owl-carousel-3">
+    <div class="item"><img src="img/single-room1.png" alt=""></div>
+    <div class="item"><img src="img/single-room2.png" alt=""></div>
+    </div>
+</div>
+      <div class="single-room-item__about col-lg-6 col-xs-12">
         <h3>О номере</h3>
         <p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
         <h3>Удобства</h3>
