--- a/src/blocks/single-room-options/single_room_options.html
+++ b/src/blocks/single-room-options/single_room_options.html
@@ -1,7 +1,7 @@
 <div class="single-room-options">
 <div class="container">
 <div class="row">
-      <div class="single-room-options-item standart-room col-xs-3 col-xs-offset-1">
+      <div class="single-room-options-item standart-room col-lg-3 col-lg-offset-1 col-xs-10 col-sm-5">
         <div class="single-room-options-item__inner">
         <a href="">
         <img src="img/single-room-standart.png" alt="" class="single-room-photo">
@@ -12,7 +12,7 @@
       </div>
       </a>
       <a href="">
-      <div class="single-room-options-item standart-plus-room col-xs-3 col-xs-offset-1">
+      <div class="single-room-options-item standart-plus-room col-lg-3 col-lg-offset-1">
         <div class="single-room-options-item__inner">
         <img src="img/single-room-standart+.png" alt="" class="single-room-photo">
           <h3>Стандарт+</h3>
@@ -22,7 +22,7 @@
       </div>
       </a>
       <a href="">
-      <div class="single-room-options-item lux-room col-xs-3 col-xs-offset-1">
+      <div class="single-room-options-item lux-room col-lg-3 col-lg-offset-1 col-xs-10 col-sm-5">
         <div class="single-room-options-item__inner">
         <img src="img/single-room-luxe.png" alt="" class="single-room-photo">
           <h3>Люкс</h3>
